--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 </head>
 <body>
-    <h1> WELCOME TO MY BIUBIUBUIU    whatup man</h1>
+    <h1> WELCOME TO MY BIUBIUBUIU man</h1>
     <p>good job</p>
 </body>
 </html>
