--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> WELCOME TO MY BIUBIUBUIU</h1>
+    <h1> WELCOME TO MY BIUBIUBUI www   U</h1>
     <p>good job</p>
 </body>
 </html>
